# bazel8_problem_repro

./: .bazelrc  BUILD.bazel  MODULE.bazel  aspects.bzl  mypy.ini  requirements.txt  test.py
